--- a/package.json
+++ b/package.json
@@ -7,11 +7,22 @@
   "license": "Artistic-1.0-Perl",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.1",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.0",
+    "ignore-loader": "^0.1.2",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-bootstrap": "^0.31.0",
+    "react-dom": "^15.5.4",
+    "style-loader": "^0.16.1"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "webpack": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
